--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "axios": "^0.18.0",
     "element-ui": "^2.4.5",
     "js-cookie": "^2.2.0",
+    "mockjs": "^1.0.1-beta3",
+    "nprogress": "^0.2.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
+    "vue-i18n": "^8.3.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
