--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "element-ui": "^2.4.5",
     "js-cookie": "^2.2.0",
     "mockjs": "^1.0.1-beta3",
+    "node-sass": "^4.10.0",
     "nprogress": "^0.2.0",
+    "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "svg-sprite-loader": "^4.1.3",
     "vue": "^2.5.2",
     "vue-i18n": "^8.3.2",
     "vue-router": "^3.0.1",
